fix(agui): 修正 HITL 暂停与恢复逻辑，实现官方暂停-恢复机制支持